# server

./: .dockerignore  .env.example  .gitignore  CERTIFICATES.md  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  generate_certs.sh  openapi.yaml
src/: auth.rs  config.rs  constants.rs  db.rs  errors.rs  main.rs  repository.rs
src/auth/: admin.rs  mod.rs  token.rs  user.rs
src/config/: app_config.rs  mod.rs  rustls_config.rs
src/database/: mongodb.rs  redis.rs
src/handlers/: admin.rs  auth.rs  health.rs  mod.rs  user.rs
src/models/: dto.rs  request.rs  response.rs  user.rs
src/utils/: password.rs  token.rs
