[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
argon2 = "0.5.3"
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
mongodb = "3.4.1"
rand_core = "0.6"
serde = "1.0.228"
thiserror = "2.0.17"
time = "0.3.44"
tokio = "1.48.0"
