[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }
bcrypt = "0.17.1"
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
mongodb = "3.4.1"
rand_core = "0.6"
redis = { version = "0.27.6", features = ["tokio-comp", "connection-manager"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2.0"
serde = "1.0.228"
serde_json = "1.0"
thiserror = "2.0.17"
time = "0.3.44"
tokio = "1.48.0"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.18", features = ["derive"] }
